# New-MirthBr

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  hl7_to_json_workflow (2).json
backend/: Cargo.toml  Dockerfile  README.md  mirth.db
backend/api/hl7/: 20251214-191635.txt  20251214-192131.txt  20251214-192206.txt  20251216-192334.txt  20251216-192352.txt
backend/output/: hl7
backend/output/admissions/: 20251216-184228_admission.json  20251216-184254_admission.json  20251216-190006_admission.json  20251216-192840_admission.json  20251216-192905_admission.json  20251216-193754_admission.json  20251216-202150_admission.json  ADMIT_${uuid}.json
backend/parametric_output.json/: message_1578d34e-ed19-4026-b212-9268b2a9f37e.txt  message_2b0ebefc-f052-40a9-a4e6-1dd7c2edae49.txt  message_59cf16c9-733a-4d48-877c-3d9163748bb8.txt  message_f7c73db3-49e3-4bed-962d-e82456b12bc0.txt  message_ff5e2334-650b-4bc7-906d-60e0674e3edd.txt
backend/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs
backend/src/api/: messages.rs  mod.rs  routes.rs
backend/src/api/handlers/: channels.rs  deploy.rs  health.rs  logs.rs  mod.rs  test.rs  websocket.rs
backend/src/api/middleware/: mod.rs
backend/src/engine/: channel_manager.rs  cleanup_worker.rs  init.rs  message.rs  mod.rs  retry_worker.rs
backend/src/engine/destinations/: database.rs  file.rs  http.rs  lua.rs  mod.rs  tcp.rs
backend/src/engine/listeners/: database.rs  file.rs  http.rs  mllp.rs  mod.rs  tcp.rs
backend/src/engine/pipeline/: processor.rs
backend/src/engine/processors/: filter.rs  lua.rs  mapper.rs  mod.rs
backend/src/lua_helpers/: hl7.rs  json.rs  logging.rs  mod.rs
backend/src/storage/: db.rs  deduplication.rs  logs.rs  messages.rs  mod.rs  models.rs
backend/src/utils/: metrics.rs
backend/tests/: integration_tests.rs
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  (+1 more)
(+80 files in other folders)
